change the contrast color to correct lines

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -79,7 +79,7 @@ nav ul li {
   left: 50%;
   padding: 8px;
 }
-.promo h2, p{
+.promo h2,.promo p{
   color: var(--secondary-color);
 }
 .promo button{
